Fix about/error page padding on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -249,6 +249,10 @@ pre {
         width: 100%;
     }
 
+    .about {
+        padding: 25px 10px;
+    }
+
     .lines {
         padding-top: 40px;
     }
